# DGtal

examples/: CMakeLists.txt
examples/io/boards/: CMakeLists.txt  dgtalBoard2D-5-hyperplane.cpp  dgtalBoard2D-5-points3D.cpp  dgtalBoard2D-6-gridCurve3D.cpp  dgtalBoard2D-6-polyline.cpp
examples/io/viewers/: CMakeLists.txt  viewer3D-11.cpp  viewer3D-7-planes.cpp
examples/python/: .ycm_extra_conf.py  CMakeLists.txt  makefile  python_exposure.cpp
src/DGtal/geometry/curves/: FreemanChain.h  FreemanChain.ih  Polyline.h  Polyline.ih
src/DGtal/io/: Display2DFactory.h  Display2DFactory.ih  Style2DFactory.ih
src/DGtal/io/boards/: Board2D.h  Board2D.ih
src/DGtal/kernel/sets/: DigitalSetByNeighborTree.h  DigitalSetByNeighborTree.ih
tests/kernel/: CMakeLists.txt  testDigitalSetByNeighborTree.cpp
